# PPR-Net-plus

./: .gitignore  inspect_h5.py  pyproject.toml
.devcontainer/: devcontainer.json
convert_to_pointcloud/bunny/: H5DataGenerator.py  H5DataGenerator_custom.py  generate_h5_custom.py  generate_train_dataset.py  parameter_custom.json
logs/ppr/log0_batch8_scale3_test_log/: log_train.txt
logs/ppr/log1_batch8_scale3_test_log/: log_train.txt
models/: calc_teris_lambda.py
pprnet/: __init__.py  pprnet.py
pprnet/backbone/: __init__.py
pprnet/backbone/pointnet2/: pointnet2_part_seg_msg.py  pointnet2_utils.py
pprnet/backup/: eval_util.py
pprnet/data/: IPA_pose_dataset.py
pprnet/utils/: dataset_util.py  train_helper.py
script/: eval_teris.py  gui_viewer.py  imgui.ini  inspect_h5.py  test.py  test_capture_zivid.py  test_dataset_teris.py  test_warp_device.py  test_zivid_coord.py  train_bunny.py  train_teris.py  ur.py  warp_fun.py  zivid_settings.yml
